# borealis

./: .gitignore  .mcp.json  BOREALIS-DESIGN-DOC.md  CHANGELOG.md  Cargo.toml  README.md  feedback.md
.claude/: settings.json
.claude/commands/: check.md  commit.md  design.md  review.md
.claude/hooks/: jj-guard.py
.crosslink/: driver-key.pub  hook-config.json  swarm.toml
.design/: aurora-memory-enhancements.md  borealis-mvp.md  memfs-v2.md  modular-runtime-and-new-tools.md  runtime-gaps.md
config/: compaction_prompt.md  default.toml  system_prompt.md
docs/: extending.md
memory/: core.md
src/: config.rs  lib.rs  main.rs  migrate.rs  rate_limit.rs  shutdown.rs  token.rs  types.rs
src/channels/: cli.rs  discord.rs  dispatcher.rs  mod.rs  modes.rs
src/core/: directive.rs  event.rs  event_loop.rs  mod.rs  observer.rs  pipeline.rs  supervisor.rs
src/history/: budget.rs  compaction.rs  mod.rs  schema.rs  store.rs
src/memory/: lifecycle.rs  mod.rs  store.rs
src/providers/: anthropic.rs  mod.rs  openai.rs  registry.rs  retry.rs
src/scheduler/: events.rs  mod.rs
src/security/: authorization.rs  mod.rs  rate_limit.rs  sandbox.rs
src/tools/: channel_tools.rs  computer_tools.rs  history_tools.rs  memory_tools.rs  mod.rs  web_tools.rs
tests/: config_test.rs  history_integration.rs  memory_test.rs  provider_test.rs
