[package]
name = "borealis"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Aurora's modular, multi-channel bot runtime"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
config = "0.15"
inventory = "0.3"
croner = "3"
dashmap = "6"
poise = "0.6.1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiktoken-rs = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15.7"

[dev-dependencies]
mockito = "1"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
